<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="title_activity_toptracks">Top 10 Tracks</string>
    <string name="title_activity_settings">Settings</string>

    <!-- menu -->
    <string name = "action_now_playing">Now Playing..</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="share_send_to">Share music to..</string>




    <string name = "unknown_artist">Unknown artist</string>
    <string name = "msg_input_artist">Artist\'s name</string>
    <string name = "msg_no_data_null">Error : No data (null). Please, search again.</string>
    <string name = "msg_there_is_no_artist">Sorry. There is no artist. Please search again.</string>
    <string name = "msg_there_is_no_track_of">Sorry. There is no track of </string>
    <string name = "msg_pls_search_other_artist">Please select other artist.</string>
    <string name = "msg_first_track">This is the first track.</string>
    <string name = "msg_last_track">This is the last track.</string>
    <string name = "msg_not_yet_play_soon">"Not yet! But play soon.. song - "</string>
    <string name = "msg_empty_artist">No Artist.</string>
    <string name = "msg_empty_track">No Track.</string>
    <string name = "msg_system_error">Sorry. There is system error. Please retry.</string>
    <string name = "msg_country_error">Please select other country on Settings menu.</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_country_code_default">US</string>
    <string name="pref_country_label_default">United States of America</string>

    <string name="pref_country_code_title" translatable="false">Country</string>
    <string name="pref_country_code_key" translatable="false">spotify_country_code</string>
    <string name="pref_country_code_label" translatable="false">Country</string>

    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Show notification on the lock screen</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>


</resources>

