<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
    <ListPreference android:title="@string/pref_country_code_title"
                    android:key="@string/pref_country_code_key"
                    android:summary="%s"
                    android:entries="@array/spotify_country_code_labels"
                    android:entryValues="@array/spotify_country_code_values"
                    android:defaultValue="@string/pref_country_code_default"/>
    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />
</PreferenceScreen>